@@ -1,3 +1,8 @@
+2003-09-26  Gary Thomas  <gary@mlbassoc.com>
+
+	* src/net/bootp.c: 
+	* src/fs/ide.c: Clean up some compiler warnings.
+
 2003-09-25  Gary Thomas  <gary@mlbassoc.com>
 
 	* src/net/bootp.c: Rework DHCP process to handle really stubborn
